done my initial bits

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -1,10 +1,10 @@
 # docker commands
 build_docker:
-	docker build -t cornerstone-issuer:0.0.4 .
-	docker tag cornerstone-issuer:0.0.4 149875424875.dkr.ecr.af-south-1.amazonaws.com/cornerstone-issuer:0.0.4
+	docker build -t cornerstone-verifier:0.0.1 .
+	docker tag cornerstone-verifier:0.0.1 149875424875.dkr.ecr.af-south-1.amazonaws.com/cornerstone-verifier:0.0.1
 
 push_docker:
-	docker push 149875424875.dkr.ecr.af-south-1.amazonaws.com/cornerstone-issuer:0.0.4
+	docker push 149875424875.dkr.ecr.af-south-1.amazonaws.com/cornerstone-verifier:0.0.1
 
 # golang commands
 fmt:
