--- a/deploy/kubernetes/aws-eks/cntrl-configmap.yaml
+++ b/deploy/kubernetes/aws-eks/cntrl-configmap.yaml
@@ -16,3 +16,5 @@ data:
   # CLIENT_URL: "http://cornerstone-verifier-agent.cornerstone-verifier.svc.cluster.local:3000"      # socket
   # server variables
   SERVER_ADDRESS: 0.0.0.0:8280
+  EMAIL_USERNAME: aws_iamzanet@bankservafrica.com
+  EMAIL_PASSWORD: K5fEoXa88
