--- a/deploy/kubernetes/aws-eks/cntrl-configmap.yaml
+++ b/deploy/kubernetes/aws-eks/cntrl-configmap.yaml
@@ -17,4 +17,4 @@ data:
   # server variables
   SERVER_ADDRESS: 0.0.0.0:8280
   EMAIL_USERNAME: aws_iamzanet@bankservafrica.com
-  EMAIL_PASSWORD: K5fEoXa88
+#  EMAIL_PASSWORD: K5fEoXa88
