--- a/deploy/kubernetes/aws-eks/cntrl-deployment.yaml
+++ b/deploy/kubernetes/aws-eks/cntrl-deployment.yaml
@@ -32,3 +32,9 @@ spec:
           envFrom:
             - configMapRef:
                 name: cornerstone-verifier-configmap
+          env:
+            - name: EMAIL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: cornerstoneverifiersecret
+                  key: emailpw
