--- a/deploy/kubernetes/aws-eks/secret.yaml
+++ b/deploy/kubernetes/aws-eks/secret.yaml
@@ -15,7 +15,7 @@ metadata:
   namespace:  cornerstone-verifier
 type: Opaque
 data:
-  acapywalletkey: aXNzdWVyX3NlY3JldA==                   # issuer_secret
-  emailpw: SzVmRW9YYTg4                                     # K5fEoXa88
+  acapywalletkey: aXNzdWVyX3NlY3JldA==                  # issuer_secret
+  emailpw: I0B3NU1AejN0MTI=                             # 
   acapywalletstoragecred: eyJhY2NvdW50IjoiaWFtemEiLCJwYXNzd29yZCI6InRlc3QxMjMiLCJhZG1pbl9hY2NvdW50IjoiaWFtemEiLCJhZG1pbl9wYXNzd29yZCI6InRlc3QxMjMifQ==            
                                                             # {"account":"iamza","password":"test123","admin_account":"iamza","admin_password":"test123"}
