--- a/deploy/kubernetes/aws-eks/secret.yaml
+++ b/deploy/kubernetes/aws-eks/secret.yaml
@@ -5,7 +5,7 @@
 
 #
 # echo -n 'dha' | base64
-# echo -n 'test123' | base64
+# echo -n 'xxxx' | base64
 #
 #
 apiVersion: v1
@@ -15,7 +15,9 @@ metadata:
   namespace:  cornerstone-verifier
 type: Opaque
 data:
-  acapywalletkey: aXNzdWVyX3NlY3JldA==                  # issuer_secret
-  emailpw: I0B3NU1AejN0MTI=                             # 
+  acapywalletkey: aXNzdWVyX3NlY3JldA==                  
+  emailpw: I0B3NU1AejN0MTI=                             
+  emailusername: YXdzX2lhbXphbmV0QGJhbmtzZXJ2YWZyaWNhLmNvbQ==
+  emailsmtpserver: c210cC5vZmZpY2UzNjUuY29t
+  emailsmtpport: NTg3  
   acapywalletstoragecred: eyJhY2NvdW50IjoiaWFtemEiLCJwYXNzd29yZCI6InRlc3QxMjMiLCJhZG1pbl9hY2NvdW50IjoiaWFtemEiLCJhZG1pbl9wYXNzd29yZCI6InRlc3QxMjMifQ==            
-                                                            # {"account":"iamza","password":"test123","admin_account":"iamza","admin_password":"test123"}
