--- a/deploy/kubernetes/aws-eks/cntrl-configmap.yaml
+++ b/deploy/kubernetes/aws-eks/cntrl-configmap.yaml
@@ -11,6 +11,7 @@ data:
   # ADDRESS_CRED_DEF_ID: "Y8X9iqAn2kYN5cce3Jgcjp:3:CL:52293:IAMZA Physical Address Credential"
   ADDRESS_CRED_DEF_ID: "Y8X9iqAn2kYN5cce3Jgcjp:3:CL:52641:IAMZA Physical Address Credential"
   VACCINE_CRED_DEF_ID: "CiW8u785VTBW1S9AsPXGXi:3:CL:52287:IAMZA Vaccine Credential"
+  CONTACTABLE_CRED_DEF_ID: "JEMWktUsL4YVuDgcPeTf9:3:CL:56578:default"
   # client variables
   # CLIENT_URL: "http://cornerstone-verifier-agent.cornerstone-verifier.svc.cluster.local:3000"      # socket
   # server variables
