--- a/deploy/k8s/cntrl-configmap.yaml
+++ b/deploy/k8s/cntrl-configmap.yaml
@@ -7,12 +7,13 @@ metadata:
 data:
   # acapy variables
   ACAPY_URL: "http://cornerstone-verifier-agent.cornerstone-verifier.svc.cluster.local:8001" # socket - ?
-  CORNERSTONE_SCHEMA_ID: "BER7WwiAMK9igkiRjPYpEp:2:Cornerstone_Credential:3.0"
-  ADDRESS_SCHEMA_ID: "Y8X9iqAn2kYN5cce3Jgcjp:2:Physical_Address_Credential:3.0"
+  CORNERSTONE_SCHEMA_ID: "BER7WwiAMK9igkiRjPYpEp:2:Cornerstone_Credential:1.0"
+  ADDRESS_SCHEMA_ID: "Y8X9iqAn2kYN5cce3Jgcjp:2:Physical_Address_Credential:1.0"
+  VACCINE_SCHEMA_ID: "EosRZ6aKyEgWVQqQyza8w:2:Vaccine_Credential:1.2"
   CONTACTABLE_CRED_DEF_ID: "JEMWktUsL4YVuDgcPeTf9:3:CL:56578:default"
   P_VALUE_YEAR: "2004"
   # server variables
   SERVER_ADDRESS: 0.0.0.0:8280
   # txn counter variables
   TXN_COUNTER_API: "https://verifier-cntr.iamza-sandbox.com/verifier/submit?payload="
-  TXN_COUNTER_SWITCH: "1"
+  TXN_COUNTER_SWITCH: "0"
