--- a/deploy/k8s/secret.yaml
+++ b/deploy/k8s/secret.yaml
@@ -12,12 +12,12 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cornerstoneverifiersecret
-  namespace:  cornerstone-verifier
+  namespace: cornerstone-verifier
 type: Opaque
 data:
-  acapywalletkey: aXNzdWVyX3NlY3JldA==                  
-  emailpw: I0B3NU1AejN0MTI=                             
+  acapywalletkey: aXNzdWVyX3NlY3JldA==
+  emailpw: OUQmQVE1UWo=
   emailusername: YXdzX2lhbXphbmV0QGJhbmtzZXJ2YWZyaWNhLmNvbQ==
   emailsmtpserver: c210cC5vZmZpY2UzNjUuY29t
-  emailsmtpport: NTg3  
-  acapywalletstoragecred: eyJhY2NvdW50IjoiaWFtemEiLCJwYXNzd29yZCI6InRlc3QxMjMiLCJhZG1pbl9hY2NvdW50IjoiaWFtemEiLCJhZG1pbl9wYXNzd29yZCI6InRlc3QxMjMifQ==            
+  emailsmtpport: NTg3
+  acapywalletstoragecred: eyJhY2NvdW50IjoiaWFtemEiLCJwYXNzd29yZCI6InRlc3QxMjMiLCJhZG1pbl9hY2NvdW50IjoiaWFtemEiLCJhZG1pbl9wYXNzd29yZCI6InRlc3QxMjMifQ==
